--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -28,12 +28,28 @@ body {
 }
 
 #app {
-  max-width: 1280px;
+  // max-width: 1280px;
   margin: 0 0;
   padding: 0;
   font-weight: normal;
+  
 }
 
 a {
   text-decoration: none;
+}
+button {
+  padding: 8px 16px;
+  background-color: #fffebb;
+  color: #2b0d0d;
+  border-radius: 8px;
+  font-size: 20px;
+  transition: all 0.2s ease;
+  cursor: pointer;
+}
+button:hover {
+  background-color: #fff455;
+}
+button:active {
+  background-color: #a19a33;
 }
