--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -26,7 +26,11 @@ body {
     color 0.5s,
     background-color 0.5s;
 }
-
+input{
+  // border-color: azure;
+  border:2px solid white;
+  padding: 4px;
+}
 #app {
   // max-width: 1280px;
   margin: 0 0;
